# velora-session

.github/workflows/: upload.yml
debian/: changelog  control
misc/: CMakeLists.txt
misc/xsessions/: lingmo.desktop.in
src/: CMakeLists.txt
src/dde-session/: environmentsmanager.cpp
src/dde-splash/: CMakeLists.txt  main.cpp  splashwidget.cpp  splashwidget.h
systemd/: CMakeLists.txt  dde-dock.service.in  dde-splash.service.in
systemd/dde-session-core.target.wants/: dde-shell@DDE.service
